test/spec_vectors/local_tee/fail/module_13.wat
(module (func $type-param-arg-num-vs-num (param f32) (local.tee 0 (f64.const 0))))